ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /notificaciones(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: fastapi-notificaciones-service
                port:
                  number: 80
